[project]
name = "mma-machine"
version = "0.1.0"
description = "Mathematical MMA evolution engine — MuJoCo humanoid fighters trained with PPO and league self-play"
requires-python = ">=3.12"
dependencies = [
    "mujoco>=3.2",
    "gymnasium>=1.0",
    "numpy>=2.0",
    "torch>=2.12",
    # transitive dep of torch, but must be declared directly: uv only applies
    # [tool.uv.sources] index redirects to direct dependencies
    "triton-rocm; sys_platform == 'linux'",
    "wandb>=0.19",
    "pyyaml>=6.0",
    "imageio[ffmpeg]>=2.34",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

# torch must come from the PyTorch ROCm index, not PyPI (PyPI wheels are CUDA-only).
# triton-rocm is torch's compiler backend dependency, hosted only on that index.
[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[tool.uv]
# ROCm wheels only exist for linux x86_64; without this, uv's universal
# resolution fails trying to solve for platforms we will never run on
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
triton-rocm = { index = "pytorch-rocm" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "NPY"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
